# binance-rs

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
examples/: binance_endpoints.rs  binance_futures_endpoints.rs
src/: account.rs  api.rs  client.rs  errors.rs  general.rs  model.rs  savings.rs  util.rs  websockets.rs
src/futures/: account.rs  general.rs  model.rs  websockets.rs
tests/: account_tests.rs  futures_account_tests.rs  general_tests.rs  market_tests.rs
tests/mocks/account/: flexible_product_position.json  locked_product_position.json
