[package]
name = "binance"
version = "0.21.0"
license = "MIT OR Apache-2.0"
authors = ["Flavio Oliveira <ollivera-dev@protonmail.com>"]
edition = "2021"

description = "Rust Library for the Binance API"
keywords = ["cryptocurrency", "trading", "binance"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/binance/"
repository = "https://github.com/wisespace-io/binance-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/binance-rs" }

[lib]
name = "binance"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
error-chain = { version = "0.12", default-features = false }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tungstenite = { version = "0.24", features = ["native-tls", "url"] }
url = "2.5"

[features]
vendored-tls = [
  "reqwest/native-tls-vendored",
  "tungstenite/native-tls-vendored",
]

[dev-dependencies]
csv = "1.3"
mockito = "1.4"
env_logger = "0.11"
criterion = "0.5"
float-cmp = "0.10"
serde_json = "1.0"

[[bench]]
name = "websocket_benchmark"
harness = false
