[package]
name = "binance_trop"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Flavio Oliveira <ollivera-dev@protonmail.com>"]
edition = "2021"

description = "Rust Library for the Binance API"
keywords = ["cryptocurrency", "trading", "binance"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/binance/"
repository = "https://github.com/TropicalDog17/binance-rs"
readme = "README.md"

[lib]
name = "binance"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
hmac = "0.12.1"
sha2 = "0.10.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
clap = "4.5.2"
thiserror = "2.0.12"

[features]
vendored-tls = [
  "reqwest/native-tls-vendored",
  "tungstenite/native-tls-vendored",
]

[dev-dependencies]
csv = "1.3.0"
mockito = "1.4.0"
env_logger = "0.11.2"
criterion = "0.5"
float-cmp = "0.9.0"
serde_json = "1.0"

[[bench]]
name = "websocket_benchmark"
harness = false
