[package]
name = "binance"
version = "0.21.2"
license = "MIT OR Apache-2.0"
authors = ["Flavio Oliveira <ollivera-dev@protonmail.com>"]
edition = "2024"

description = "Rust Library for the Binance API"
keywords = ["cryptocurrency", "trading", "binance"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/binance/"
repository = "https://github.com/wisespace-io/binance-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "wisespace-io/binance-rs" }

[lib]
name = "binance"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
hmac = "0.12.1"
sha2 = "0.10.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
error-chain = { version = "0.12.4", default-features = false }
log = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
url = "2.5.0"
clap = "4.5.2"
uuid = { version = "1.18.0", features = ["v4"] }

[features]
vendored-tls = [
  "reqwest/rustls",
  "tungstenite/rustls-tls-webpki-roots",
]

[dev-dependencies]
csv = "1.3.0"
mockito = "1.4.0"
env_logger = "0.11.2"
criterion = "0.8"
float-cmp = "0.10.0"
serde_json = "1.0"

[[bench]]
name = "websocket_benchmark"
harness = false
